# aeoffice

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  package-lock.json  package.json  progress.md  tsconfig.base.json  tsconfig.json
GameEngine/: build.sh
assets/: ASSET_MANIFEST.md
crates/web-bindings/: Cargo.toml
crates/web-bindings/src/: lib.rs
docs/: add-migration-plan.md  add-systems-parity-audit.md  ai-map-readiness.md  avatar-atlas-import-path.md  customer-virtual-office-platform-spec.md  development-rollout-plan.md  engine-boundary.md  hard-fork-architecture.md  license-audit.md  phase-0-baseline-verification.md  phase-0-refactor-plan.md  renderer-performance-budget.md  skyoffice-fork-maintenance.md
documentation/: crew-system.md  echo-scars-v0.md  first-playable-assessment.md  first-session-balance.md  general.md  hero-character-sheet.md  idle-economy.md  modifier-system.md  object-templates.json  object-types.md  osm_import.md  phase-0-exit-checklist.md  phase-0-simulation-spec.md  save-load.md  scaling-models.json  technical-architecture.md  travel-encounters-v0.md
godot/: README.md  addgame.gdextension.uid  clear_cache.sh  icon.svg.import  project.godot
infra/: .env.example  README.md  docker-compose.yml
legacy/: README.md
lore/: LORE_REVISION_v2.md  Lore_todo.md  lore.md  progress_report.md  reference_bible.md  thesaurus.md  timeline.md  timeline_events.md  timeline_quiet_centuries_151-225.md  timeline_quiet_centuries_226-300.md  timeline_quiet_centuries_26-75.md  timeline_quiet_centuries_76-150.md
mechanics/: specifications.md
(+1244 files in other folders)
