[workspace]
members = [
    "crates/core",
    "crates/web-bindings",
    "crates/web-worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"
serde-wasm-bindgen = "0.6.5"
