[workspace]
members = [
    "crates/add-core",
    "crates/add-web-bindings",
    "crates/add-web-worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"
