[package]
name = "add-web-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
add-core = { path = "../core" }
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
